--- a/cs.css
+++ b/cs.css
@@ -99,9 +99,10 @@ color: #2F3035;
     cursor: pointer;
     color:#2F3035;
 }
-.video-nav{position: relative;
- /* width: 720px;  */
-/* height: 405px; */
+.video-nav img{position: relative;
+   /* display: none; */
+ width:100%;
+ height: auto;
 margin: 0 auto 32px auto;
 box-shadow: 0px 2px 4px rgba(47, 48, 53, 0.15);
 border-radius: 16px;
@@ -161,7 +162,7 @@ margin-bottom: 8px;
 .row2-box{
     margin-bottom: 32px;
     }
-.input-head-1 h3{margin: 0;;
+.input-head-1 h3{margin: 0;
 font-weight: bold;
 font-size: 16px;
 line-height: 16px;
@@ -171,7 +172,6 @@ color: #2F3035;
 text-align: left;
 }
 .input-head-2 h3{margin-top: 16px;
-    margin-top: 16px;
 font-weight: bold;
 font-size: 16px;
 line-height: 16px;
@@ -183,9 +183,7 @@ text-align: left;
 
 input{margin-top: 10px;
     margin-left:0;
-    padding-left: 18px;
-height: 48px;
-width: 300px;
+padding: 14px 62px 14px 18px;
 background: #FFFFFF;
 border: 1px solid #FFFFFF;
 box-shadow: 0px 1px 1px rgba(47, 48, 53, 0.1), 0px 2px 4px rgba(47, 48, 53, 0.1);
@@ -196,8 +194,7 @@ line-height: 20px;
 color: #86899B;
 }
 .row2-button{
-width: 300px;
-height: 48px;
+padding:14px 75px;
 background: #FFD300;
 border: 1px solid #FFD300;
 box-shadow: 0px 1px 1px rgba(47, 48, 53, 0.1), 0px 2px 4px rgba(47, 48, 53, 0.1);
@@ -216,12 +213,13 @@ color: #2F3035;
 #section2{
 
     width:100%;
-    position: relative;
+    
 }
 .main-box{
 padding-top: 164px;
 display: flex;
 justify-content: space-between;
+gap: 124px;
 }
 .lft-box h3{margin-top: 28px; 
     margin-bottom: 32px;
@@ -264,10 +262,12 @@ color: #86899B;
 }
 .rght-box{
 position: relative;
-width: 400px;
+ width: 400px; 
+height: 625px;
+
 }
 .outer{
-    position: relative;
+    /* position: relative; */
 }
 .inner{
     position: absolute;
@@ -275,90 +275,98 @@ width: 400px;
     left: 15px;
 
 }
-.msg-div{
-    display: flex;
+
+.msg-div{display:flex;
+    flex-direction: row;
+
 }
-.msg-box img{
+.iim{ 
     width: 18px;
 height: 24px;
-margin-top: 14px;
-margin-left: 16px;
-}
-
-.msg-box h4{ margin-left: 8px;
-   margin-top: 16px;
-   margin-bottom: 8px;
-}
-.msg-box p{
-    margin-top: 0;
-    margin-left: 42px;
-    margin-bottom: 16px;
-}
-.msg5 p{
-    margin-top: 18px;
-    margin-left: 8px;
 }
 .msg-box h4{
- font-weight: bold;
+    padding-left: 8px;
+    font-weight: bold;
 font-size: 16px;
 line-height: 16px;
 color: #2F3035;
+margin-bottom: 8px;
+
 }
-.msg-box p{font-weight: normal;
+.msg-box p{
+    padding-left: 26px;
     font-size: 14px;
-    line-height: 16px;
-    color: #86899B;
+line-height: 16px;
+color: #86899B;
 }
-.msg1 {
-    position: absolute;
-    top: 52px;
-    left: 57px;
-width: 252px;
-height: 72px;
-background: #FFFFFF;
+.msg1{position: absolute;
+    padding-left: 16px;
+    padding-top: 14px;
+    padding-bottom: 16px;
+    padding-right: 27px;
+    top: 63px;
+    left: 68px;
+    background: #FFFFFF;
 box-shadow: 0px 2px 3px rgba(47, 48, 53, 0.1);
 border-radius: 14px;
 margin-bottom: 24px;
 }
-.msg2 {
+.msg2{
     position: absolute;
-    top: 148px;
-    left: 137px;
-width: 252px;
-height: 72px;
-background: #FFFFFF;
-box-shadow: 0px 2px 3px rgba(47, 48, 53, 0.1);
-border-radius: 14px;}
-.msg3 {
-    position: absolute;
-    top: 244px;
-    left: 57px;
-width: 252px;
-height: 72px;
-background: #FFFFFF;
+    padding-left: 16px;
+    padding-top: 14px;
+    padding-bottom: 16px;
+    padding-right: 34px;
+    left: 148px;
+    top:159px;
+    background: #FFFFFF;
 box-shadow: 0px 2px 3px rgba(47, 48, 53, 0.1);
 border-radius: 14px;
-margin-bottom: 24px;}
-.msg4 {
+margin-bottom: 24px;
+   
+}
+.msg3{
     position: absolute;
-width: 252px;
-height: 72px;
-top: 340px;
-    left: 137px;
-background: #FFFFFF;
+    padding-left: 16px;
+    padding-top: 14px;
+    padding-bottom: 16px;
+    padding-right: 21px;
+    top: 255px;
+    left: 68px;
+    background: #FFFFFF;
 box-shadow: 0px 2px 3px rgba(47, 48, 53, 0.1);
 border-radius: 14px;
-margin-bottom: 24px;}
-.msg5 {
+margin-bottom: 24px;
+}
+.msg4{
     position: absolute;
-width: 252px;
-height: 132px;
-top: 436px;
-    left: 57px;
-background: #FFFFFF;
+    padding-left: 16px;
+    padding-top: 14px;
+    padding-bottom: 16px;
+    padding-right: 27px;
+    top: 351px;
+    left: 148px;
+    background: #FFFFFF;
 box-shadow: 0px 2px 3px rgba(47, 48, 53, 0.1);
 border-radius: 14px;
-margin-bottom: 24px;}
+margin-bottom: 24px;
+}
+.msg5{
+    position: absolute;
+    padding-left: 16px;
+    padding-top: 14px;
+    padding-bottom: 16px;
+    padding-right: 27px;
+    top: 447px;
+    left: 68px;
+    background: #FFFFFF;
+box-shadow: 0px 2px 3px rgba(47, 48, 53, 0.1);
+border-radius: 14px;
+}
+
+.msg5 p{
+    padding-left: 12px;
+}
 
 .small-box{
     margin: 100px auto 98px auto;
@@ -416,26 +424,29 @@ background-image: url(./images/sec3.png);
     margin-right: auto;
     padding-top: 100px;
 }
-.boxes{
-    display: flex;
-    justify-content: space-between;
+.boxes{margin: 0;
+     display: flex; 
+    justify-content: space-between; 
+    margin-bottom: 80px;
 }
-.box{position: relative;
-    width: 428px;
-height: 120px;
+.box{
+    position: relative;
+    /* width: 428px; */
+/* height: 120px; */
 display: flex;
 justify-content: space-around;
-margin-bottom: 80px;
+
 }
-.boxi{position: absolute;
+.boxi{position: absolute; 
     padding-left: 0;
     height: 40px;
     width: 40px;
     margin: 0;
     top: 0;
     left: 0;}
- .box-txtt  {position: absolute;
-     padding-left: 64px;
+ .box-txtt  {
+     /* position: absolute; */
+     padding-left: 72px;
  } 
 
 .box h2{margin-bottom: 16px;
@@ -483,8 +494,8 @@ text-align: left;
     justify-content: space-between;
     gap:32px;
 }
-.cont-btn1{width: 162px;
-    height: 48px;
+.cont-btn1{padding:14px 32px;
+    height: auto;
     background: #2F3035;
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
@@ -500,8 +511,8 @@ text-align: left;
     cursor: pointer;
     color:#2F3035;
 }
-.cont-btn2{width: 209px;
-    height: 48px;
+.cont-btn2{
+ padding:14px 32px; 
 background: #FFD300;
 border-color: #FFD300;
 border-radius: 48px;
@@ -520,8 +531,6 @@ color: #2F3035;
     color:#2F3035;
 }
 .footer{
-width: 1400px;
-height: 102px;
 }
 .footerr{margin: 42px auto 40px auto;
 display: flex;
@@ -539,11 +548,11 @@ text-decoration-line: underline;
 color: #86899B;
 }
 
-@media only screen and (max-width: 480px)
+@media only screen and (max-width: 768px)
  {
    
   .section1{
-   width: 235%;
+  
     height: auto;   
     background-size:cover;
     border: 1px solid black;
@@ -594,10 +603,14 @@ color: #86899B;
 .row2-box{
     /* margin: 10% auto 10% auto; */
 }
+input{
+    width: 100%;
+}
 .row2-button{
     /* margin-bottom: 10%; */
+    width: 100%;
 }
-#section2{width: 235%;
+#section2{
    margin-left: auto;
    margin-right: auto;
 }
@@ -625,18 +638,18 @@ color: #86899B;
 }
 .lft-btm-text{padding-left: 13%;}
 .lft-btm-text h2{
-    padding-left: 0;
+    padding-left: 10%;
+    font-size: ;
 }
 .lft-btm-text p{padding-left: 0;
     text-align:left;}
 .rght-box{
-    width: 50%;
     margin: auto;
 }
 .small-box{
     text-align: center;
 }
-#section3{width: 235%;
+#section3{
 
 }
 .content{margin: auto;
@@ -648,6 +661,9 @@ color: #86899B;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+.box-txtt{
+    margin-bottom: 10%;
 }
 
 .container-2{
@@ -676,7 +692,13 @@ display: none;
     width: 50%;
 display: flex;
 }
-footer{width: 235%;
+.cont-btn1{
+    width: 100%;
+}
+.cont-btn2{
+    width: 100%;
+}
+footer{
 } 
 
 .footerr{ margin: 5% auto;
@@ -687,7 +709,7 @@ footer{width: 235%;
 }
 
 @media only screen 
-  and (min-device-width: 480px) 
+  and (min-device-width: 768px) 
   and (max-device-width: 1280px) {
     .section1{
         width: 100%;
