--- a/cs.css
+++ b/cs.css
@@ -99,6 +99,9 @@ color: #2F3035;
     cursor: pointer;
     color:#2F3035;
 }
+.video-nav{
+    position: relative;
+}
 .video-nav img{position: relative;
    /* display: none; */
  width:100%;
@@ -120,7 +123,7 @@ text-align: center;
 }
 .bottom-box{
   margin: 0 auto 0 auto;
-width: 720px;
+ width: 720px; 
 font-weight: normal;
 background: linear-gradient(105.14deg, #FFFFFF 0.34%, #F3F4F9 48.48%), #F3F4F9;
 box-shadow: 0px 1px 1px rgba(47, 48, 53, 0.1), 0px 2px 6px rgba(47, 48, 53, 0.1);
@@ -212,7 +215,7 @@ color: #2F3035;
 }
 #section2{
 
-    width:100%;
+   
     
 }
 .main-box{
@@ -251,19 +254,23 @@ color: #86899B;
     width: 40px;
     height: 40px;
 }
-.lft-btm-text h2{padding-left: 72px;
+.lft-btm-text{
+    padding-left: 72px;
+}
+.lft-btm-text h2{
     margin-bottom: 16px;
     top: 0;
 
 }
 .lft-btm-text p{
-    padding-left: 72px;
+    
     margin-bottom: 40px;
 }
 .rght-box{
+    /* display: none; */
 position: relative;
  width: 400px; 
-height: 625px;
+/* height: 625px; */
 
 }
 .outer{
@@ -493,6 +500,7 @@ text-align: left;
 .container-right{display: flex;
     justify-content: space-between;
     gap:32px;
+    align-items: flex-start;   
 }
 .cont-btn1{padding:14px 32px;
     height: auto;
@@ -571,10 +579,10 @@ color: #86899B;
       max-width:100%;
   }
   .play{
-      width: 50%;
-      height: 50%;
+      width: 100%;
+      height: 100%;
   }
-  .bottom-box{width: 60%;
+  .bottom-box{width: 90%;
       /* margin: auto; */
       flex-direction: column;
       padding:2rem;
@@ -599,16 +607,22 @@ color: #86899B;
     margin: 0;
     margin-left: auto;
     margin-right: auto;
+    /* width: 60%; */
+
 }
 .row2-box{
     /* margin: 10% auto 10% auto; */
 }
 input{
     width: 100%;
+    padding: 5% 5%;
+    font-size: 15px;
+
+
 }
 .row2-button{
     /* margin-bottom: 10%; */
-    width: 100%;
+    padding: 5% 25%;
 }
 #section2{
    margin-left: auto;
@@ -641,11 +655,61 @@ input{
     padding-left: 10%;
     font-size: ;
 }
+.lfti img{
+    width: 100%;
+}
+.lft-btm-text h2{
+    font-size: 24px;
+}
 .lft-btm-text p{padding-left: 0;
     text-align:left;}
 .rght-box{
     margin: auto;
+    width: 100%;
+   position: relative;
 }
+.outer{
+     width: 90%; 
+    
+}
+.inner{
+     width: 90%; 
+     height: auto;
+     
+}
+.msg-box h4{
+    /* font-size: 9px; */
+}
+.msg-box p{
+    /* font-size: 9px; */
+}
+
+.msg1{
+    padding:3% 3%;
+    left: 15%;
+
+margin-bottom: 5%;
+}
+.msg2{
+    padding:3% 3%;
+    left: 25%;
+   top:
+} 
+.msg3{
+    padding:3% 3%;
+    left: 15%;
+} 
+ .msg4{
+    padding:3% 3%;
+    left:25%;
+} 
+.msg5{
+    padding:3% 3%;
+    left:15%;
+} 
+
+
+
 .small-box{
     text-align: center;
 }
@@ -689,8 +753,9 @@ display: none;
     text-align: center;
 }
 .container-right{margin: auto;
-    width: 50%;
+   
 display: flex;
+flex-direction: column;
 }
 .cont-btn1{
     width: 100%;
